# data_structures_practice2

./: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm  CMakeLists.txt  README.txt  image.c  image.h  main.c  teste visual.ods
tadbasics/: cell.c  cell.h  queue.c  queue.h  xcpt.c
